--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,13 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+    "@/*": ["./*"],
+    "@/components/*": ["./components/*"],
+    "@/hooks/*": ["./hooks/*"],
+    "@/lib/*": ["./lib/*"],
+    "@/styles/*": ["./styles/*"],
+    "@/prisma/*": ["./prisma/*"],
+    "@/assets/*": ["./assets/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
