--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.23",
     "prisma": "^4.14.1",
-    "tailwindcss": "3.2.4",
+    "tailwindcss": "^3.2.4",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.1"
   }
