--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL='postgresql://postgres:rWCibsvUcH5FqgEUwCFq@containers-us-west-158.railway.app:8025/railway?schema=public'
+
+JWT_SECRET='babe_kokolay'
+COOKIE_NAME='soemoenaing'
